--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
  <!-- Bootstrap CSS -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
+
+ <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
     <title>React App</title>
   </head>
   <body>
